--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 											<ul>
 												<li><a href="project1.html">Project 1</a></li>
 												<li><a href="project2.html">Project 2</a></li>
-												<li><a href="https://github.com/Degri95/Final_Project/blob/main/README.md">Project 3</a></li>
+												<li><a href="https://github.com/Degri95/Final_Project/blob/main/README.md">Group Project</a></li>
 											</ul>
 										</li>
 									</ul>
