Updating to add additional project.

--- a/project1.html
+++ b/project1.html
@@ -163,7 +163,8 @@
 											<ul>
 												<li><a href="project1.html">Project 1</a></li>
 												<li><a href="project2.html">Project 2</a></li>
-												<li><a href="https://github.com/Degri95/Final_Project/blob/main/README.md">Group Project</a></li>
+												<li><a href="project3.html">Project 3</a></li>
+												<li><a href="https://github.com/Degri95/Final_Project/blob/main/README.md">Project 4</a></li>
 											</ul>
 										<li>
 									</ul>
