--- a/index.html
+++ b/index.html
@@ -47,18 +47,22 @@
 									</header>
 									<div class="posts">
 										<article>
+											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
 											<h3>Data Manipulation and Statistical Analysis</h3>
 											<p>Strong background in data manipulation, statistical analysis, and modeling.  Utilized statistical tools for data-driven insights, contributing to monthly insights for business operations and customer experience.</p>
 										</article>
 										<article>
+											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
 											<h3>Data Visualization</h3>
 											<p>Experienced in creating visualizations using Tableau and PowerBI.  Created reporting for various business programs.</p>
 										</article>
 										<article>
+											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
 											<h3>Cross-Functional Collaboration</h3>
 											<p>Collaboration skills demonstrated by involvement in various cross-functional projects.  Contributed to projects by intaking requests for insights, completing data exploration, and supporting root cause analysis.</p>
 										</article>
 										<article>
+											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
 											<h3>Business Analysis and Insight Generation</h3>
 											<p>Utilized data-driven quality assurance activities to provide monthly insights.  Improved customer experience by suggesting changes to business procedures based on customer feedback and correlational analysis.</p>
 										</article>
@@ -87,7 +91,8 @@
 											<ul>
 												<li><a href="project1.html">Project 1</a></li>
 												<li><a href="project2.html">Project 2</a></li>
-												<li><a href="https://github.com/Degri95/Final_Project/blob/main/README.md">Group Project</a></li>
+												<li><a href="project3.html">Project 3</a></li>
+												<li><a href="https://github.com/Degri95/Final_Project/blob/main/README.md">Project 4</a></li>
 											</ul>
 										</li>
 									</ul>
